[package]
edition = "2021"
name = "x-playlist-builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = {version = "0.3.25"}
rspotify = {version = "0.11.5", features = ["env-file", "cli"]}
serde = {version = "1.0", features = ["derive"]}
