[package]
edition = "2021"
name = "x_playlist_builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
actix-web = "4"
futures = {version = "0.3.25"}
futures-util = {version = "0.3.25"}
rspotify = {version = "0.11.5", features = ["env-file", "cli"]}
serde = {version = "1.0", features = ["derive"]}
