[package]
edition = "2021"
name = "x_playlist_builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
dialoguer = "0.11"
futures = {version = "0.3.31"}
futures-util = {version = "0.3.31"}
rspotify = {version = "0.14.0", features = ["env-file", "cli"]}
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
